# panda-smalltalk

./: .bzrignore  AUTHORS  COPYING  COPYING.GPL  COPYING.LGPL  Makefile-libgdtoa.am  Makefile-libgoo.am  Makefile-libmpa.am  Makefile-libpanda.am  Makefile-libs.am  Makefile-libtommath.am  Makefile-optparse.am  Makefile-panda.am  Makefile-tests.am  Makefile.am  README  autogen.sh  configure.ac  indent.sh  st-mode.el
docs/: bootstrapping.txt  bytecodes.txt  object-memory.txt  vision.txt
goo/: Makefile.am  st-array.c  st-array.h  st-association.c  st-association.h  st-ast.c  st-ast.h  st-bootstrap.c  st-byte-array.c  st-byte-array.h  st-bytecode.c  st-bytecode.h  st-character.h  st-class.c  st-class.h  st-compiled-code.c  st-compiled-code.h  st-compiled-method.c  st-compiled-method.h  st-compiler.c  st-compiler.h  st-context.c  st-context.h  st-descriptor.c  st-descriptor.h  st-float-array.c  st-float-array.h  st-float.c  st-float.h  st-generator.c  st-generator.h  st-hashed-collection.c  st-hashed-collection.h  st-heap-object.c  st-heap-object.h  st-input.c  st-input.h  st-interpreter.c  st-interpreter.h  st-large-integer.c  (+32 more)
libs/: Makefile.am
libs/libgdtoa/: dmisc.c
libs/libtommath/: Makefile.am
libs/libtommath/backup/: makefile
libs/optparse/: Makefile.bak  fudd.c  notpython.c  optparse.c  optparse.h  optparse.tex
po/: POTFILES.in
scratch/: main  main.c  text.h
smalltalk/: Association.st  Behaviour.st  Character.st  ClassDefinitions.st  Collection.st  ContextPart.st  Dictionary.st  False.st  Integer.st  LargeInteger.st  Magnitude.st  Metaclass.st  Object.st  SequenceableCollection.st  SmallInteger.st  String.st  Symbol.st  UndefinedObject.st  class-declarations.st
src/: Makefile  main.c  st-array.c  st-array.h  st-association.c  st-association.h  st-behavior.c  st-behavior.h  st-byte-array.c  st-byte-array.h  st-character.h  st-compiler.c  st-compiler.h  st-context.c  st-context.h  st-cpu.c  st-cpu.h  st-descriptor.c  st-descriptor.h  st-dictionary.c  st-dictionary.h  st-float-array.c  st-float-array.h  st-float.c  st-float.h  st-generator.c  st-handle.h  st-hashed-collection.c  st-heap-object.c  st-heap-object.h  st-heap.c  st-heap.h  st-identity-hashtable.c  st-identity-hashtable.h  st-input.c  st-input.h  st-interpreter.h  st-large-integer.c  st-large-integer.h  st-lexer.c  (+34 more)
st/: Array.st  ArrayedCollection.st  Association.st  Bag.st  Behavior.st  BlockContext.st  Boolean.st  ByteArray.st  ByteString.st  Character.st  Class.st  Collection.st  CompiledMethod.st  ContextPart.st  Dictionary.st  Exception.st  ExternalProxy.st  False.st  FileStream.st  Float.st  FloatArray.st  Fraction.st  HashedCollection.st  IdentityDictionary.st  IdentitySet.st  Integer.st  LargeInteger.st  Link.st  List.st  Magnitude.st  Message.st  Number.st  Object.st  ObjectMemory.st  OrderedCollection.st  PositionableStream.st  Process.st  SequenceableCollection.st  Set.st  SmallInteger.st  (+14 more)
tests/: Makefile.am  example.st  example2.st  test-generator.c  test-heap.c  test-input.c  test-interpreter.c  test-lexer.c  test-parser.c  test-string-stream.c
tests/data/: lexer-input-01.txt  lexer-input-02.txt  lexer-input-03.txt  lexer-input-04.txt  lexer-input-05.txt  lexer-output-01.txt  lexer-output-02.txt  lexer-output-03.txt  lexer-output-04.txt  lexer-output-05.txt
