
ACLOCAL_AMFLAGS = -I .

lib_LTLIBRARIES =
noinst_LTLIBRARIES =
bin_PROGRAMS = 
noinst_PROGRAMS =
DISTCLEANFILES =
CLEANFILES = 
BUILT_SOURCES = 

EXTRA_DIST = \
	COPYING    \
	st-mode.el \
	autogen.sh \
	docs/bytecodes.txt \
	docs/object-memory.txt

include Makefile-panda.am
include Makefile-libs.am
include Makefile-tests.am